# pytest_switching_env_var

./: README.md  main.py  pyproject.toml
run_tests/: a_test.sh  b_test.sh  test_all.py
tests/: test_main.py
