[tool.poetry]
name = "pytest_switching_env_var"
version = "1.0.0"
authors = ["silverrainb"]
description = ""
readme = "README.md"
repository = "https://github.com/silverrainb/pytest_switching_env_var"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.pytest.ini_options]
addopts = "-rA -q"
markers = [
    "a",
    "b",
]
minversion = "6.2"
testpaths = [
    "run_tests"
]
